# mfrc522

./: .gitignore  Cargo.toml  memory.x  openocd.gdb
examples/: playground.rs
src/: access.rs  lib.rs  mifare.rs  picc.rs  selftest.rs  testutils.rs
tests/: authentication.rs
