[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the MFRC522 (RFID reader/writer)"
documentation = "https://docs.rs/mfrc522"
keywords = ["embedded-hal", "rfid"]
license = "MIT OR Apache-2.0"
name = "mfrc522"
repository = "https://github.com/japaric/mfrc522"
version = "0.2.0"

[dependencies]
embedded-hal =  "0.2.0"
generic-array = "0.11.0"

[dev-dependencies]
linux-embedded-hal = "0.2.2"
embedded-hal-mock = "0.7.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.2"
# panic-itm = "0.4.1"
cortex-m-rtfm = "0.4.3"

[dev-dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]